<resources>
    <string name="app_name">olxcm</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="failed_to_send_message">Failed to send Message : %1$s</string>
    <string name="message_sent_successfully">Message sent successfully</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="olxcm">OlxCM</string>
    <string name="welcome">Bem vindo á loja de compra e venda online</string>
    <string name="anuncios">Anúncios</string>
    <string name="leiloes">Leilões</string>
    <string name="criarLeilao">Criar Leilão</string>
    <string name="criarAnuncio">Criar Anúncio</string>
    <string name="meusleiloes">Os meus Leilões</string>
    <string name="meusAnuncios">Os meus Anúncios</string>
    <string name="meuPerfil">O meu perfil</string>
    <string name="favoritos">Favoritos</string>
    <string name="login">Login</string>
    <string name="entra">entra</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="descricao">descricao</string>
    <string name="preco">preco</string>
    <string name="titulo_do_anuncio">Titulo do Anuncio</string>
    <string name="contactar_anunciante">Contactar Anunciante</string>
    <string name="imagem">imagem</string>
    <string name="preference_file_key">spk</string>
    <string name="id">id</string>
</resources>